k8s/local/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: food2gether
spec:
  type: ExternalName
  externalName: host.minikube.internal
  ports:
  - name: frontend
    protocol: TCP
    port: 80
    targetPort: 8080
