k8s/local/dev-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food2gether-frontend-dev-bypass
  namespace: ${namespace}
spec:
  rules:
  - http:
      paths:
      - path: /@vite
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /@modules
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /@react-refresh
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
